--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     }
   },
   "require": {
-    "firebase/php-jwt": "6.10.1"
+    "firebase/php-jwt": "6.10.1",
+    "vlucas/phpdotenv": "5.6.1"
   }
 }
